# aws-sam-cli-app-templates

./: .gitignore  .travis.yml  README.md  buildspec-build-invoke.yml  buildspec-dotnetcore2.1.yml  buildspec-dotnetcore3.1.yml  buildspec-go1.x.yml  buildspec-unittest-java11.yml  buildspec-unittest-java8-al2.yml  buildspec-unittest-java8.yml  buildspec-unittest-nodejs-10.x.yml  buildspec-unittest-nodejs-12.x.yml  buildspec-unittest-python2.7.yml  buildspec-unittest-python3.6.yml  buildspec-unittest-python3.7.yml  buildspec-unittest-python3.8.yml  buildspec-unittest-ruby2.5.yml  buildspec-unittest-ruby2.7.yml  buildspec.yml  manifest-schema.json  manifest-v2.json  manifest-v3.json  manifest.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_test.yml  build_test_invoke.yml  check-samconfig.yml  codeql.yml  manifest-backward-compability-check.yml  manifest-backward-compatibility-check.yml  manifest-v2-check.yml  pr-labeler.yml
Sam App/: README.md  template.yaml
al2/rust/hello/{{ cookiecutter.project_slug }}/: Cargo.toml  README.md  template.yaml
al2/rust/hello/{{ cookiecutter.project_slug }}/rust_app/src/: main.rs
appsync_js1.x/: README.md  cookiecutter.json
appsync_js1.x/{{cookiecutter.project_name}}/: README.md  template.yaml
buildspecs/: README.md  buildspec-build-invoke-image.yml  buildspec-build-invoke.yml  buildspec-dotnet5.0.yml  buildspec-dotnet6.0.yml  buildspec-dotnet6.yml  buildspec-dotnetcore2.1.yml  buildspec-dotnetcore3.1.yml  buildspec-go1.x.yml  buildspec-graalvm.yml  buildspec-provided.yml  buildspec-rust.yml  buildspec-unittest-java11.yml  buildspec-unittest-java8-al2.yml  buildspec-unittest-java8.yml  buildspec-unittest-nodejs-10.x.yml  buildspec-unittest-nodejs-12.x.yml  buildspec-unittest-nodejs-14.x.yml  buildspec-unittest-nodejs-16.x.yml  buildspec-unittest-nodejs-18.x.yml  buildspec-unittest-python2.7.yml  buildspec-unittest-python3.10.yml  buildspec-unittest-python3.6.yml  buildspec-unittest-python3.7.yml  buildspec-unittest-python3.8.yml  buildspec-unittest-python3.9.yml  buildspec-unittest-ruby2.5.yml  buildspec-unittest-ruby2.7.yml  buildspec-unittest-rust.yml
digit_classifier/: README.md  template.yml
digit_classifier/.aws-sam/: build.toml
digit_classifier/app/: requirements.txt
dotnet5.0-image/cookiecutter-aws-sam-hello-dotnet-lambda-image/: cookiecutter.json
dotnet6-image/cookiecutter-aws-sam-hello-dotnet-lambda-image/: README.md  cookiecutter.json
dotnet6.0-image/cookiecutter-aws-sam-hello-dotnet-lambda-image/: README.md  cookiecutter.json
dotnet6/cookiecutter-aws-sam-hello-powershell/: README.md
rust(provided.al2)/cookiecutter-aws-sam-hello-rust/{{ cookiecutter.project_slug }}/: Cargo.toml  README.md
rust-1.x/cookiecutter-aws-sam-hello-rust/: .gitignore  Cargo.toml  README.md  cookiecutter.json  samconfig.toml
rust-1.x/cookiecutter-aws-sam-hello-rust/.aws-sam/: build.toml
rust-1.x/cookiecutter-aws-sam-hello-rust/src/: main.rs
rust-1.x/cookiecutter-aws-sam-hello-rust/{{cookiecutter.project_name}}/: template.yaml
rust-1.x/cookiecutter-aws-sam-s3-rust/: .gitignore  Cargo.toml  Makefile  README.md  template.yml
rust-1.x/cookiecutter-aws-sam-s3-rust/.aws-sam/: build.toml
rust-1.x/cookiecutter-aws-sam-s3-rust/src/: main.rs
rust-1.x/cookiecutter-aws-sam-s3-rust/tests/: test_bake_project.py
rust/cookiecutter-aws-sam-hello-rust/{{ cookiecutter.project_slug }}/: Cargo.toml  README.md  template.yaml
rust/cookiecutter-aws-sam-hello-rust/{{ cookiecutter.project_slug }}/src/: main.rs
scripts/: check_manifest.py  check_samconfig_exists.py  common.py  update_all_samconfig.py
tests/: __init__.py
tools/: generate_manifest_schema.py
(+2367 files in other folders)
