[package]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.6"
aws-sdk-dynamodb = "0.6"
aws-smithy-client = { version = "0.36", features = ["test-util"] }
lambda_http = "0.5"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
aws-smithy-http = "0.36"
aws-types = { version = "0.6", features = ["hardcoded-credentials"] }
http = "0.2"